tests/negative/ConstructorExpectedLeftApplication.juvix
module ConstructorExpectedLeftApplication;

f : {A : Type} -> A -> A
  | (x y) := x;

